--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 
     --text-primary: #1b1b1b;
-    --text-secondary: #333333;
+    --text-secondary: #301e1e;
     --text-tertiary: #696969;
     --text-headline: #e1624f;
 
@@ -13,7 +13,10 @@
     --accent-pink: #E5245E;
     --accent-purple: #591B98;
 
-    --font-opensans: 'Open Sans', sans-serif;
+
+    --font-opensans: 'Open Sans', sans-serif;,
+
+    
     
 }
 
@@ -21,9 +24,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style: none;
     border: 0;
-    font-family: var(--font-opensans);
+  
     
 }
 
@@ -44,5 +46,56 @@ h3 {
 }
 p {
     font-size: 16px;
+
     
 }
+
+body {
+    width: 100vw;
+    padding: 88px 80px ;
+    border: 1px solid red;
+    font-family: var(--font-opensans);
+}
+
+#container{
+display: flex;
+flex-direction: column;
+border: var(--border-primary);
+
+}
+
+
+ .headline {
+   color:var(--text-headline);
+   font-weight: bold;
+   text-align: left;
+}
+
+.title {
+color: var(--text-primary);
+margin-bottom: 40px;
+display: block;
+
+}
+
+#description-img img {
+    max-width: 100%;
+    height: 660px;
+    border-radius: 28px;
+    margin-bottom: 24px;
+
+}
+
+#description-img p {
+    color:var(--text-secondary);
+    font-style: italic;
+    margin-bottom: 40px;
+
+}
+
+
+hr {
+    border: var(--border-primary);
+    width: 100%;
+}
+
